--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "name": "Cristopher",
     "email": "cristophernamchee12@gmail.com"
   },
+  "exports": "./dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "private": false,
   "type": "module",
   "scripts": {
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "build": "tsc"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.16",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -23,9 +28,12 @@
     "eslint-config-namchee": "^1.0.8",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsdoc": "^36.1.0",
+    "jest": "^27.2.0",
     "prettier": "2.3.2",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "engines": {
@@ -34,5 +42,10 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
+    "node-fetch": "^3.0.0",
+    "tslib": "^2.3.1"
   }
 }
