--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "eslint-config-namchee/tsconfig",
+  "compilerOptions": {
+    "outDir": "./dist",
+    "importHelpers": true,
+    "declaration": true
+  },
   "include": [
     "src/**/*.ts"
   ],
