--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "scripts": {
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.1.16",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsdoc": "^36.1.0",
     "jest": "^27.2.0",
+    "msw": "^0.35.0",
     "prettier": "2.3.2",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
