--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "extends": "eslint-config-namchee/tsconfig",
   "compilerOptions": {
     "outDir": "./dist",
-    "importHelpers": true,
     "declaration": true
   },
   "include": [
     "src/**/*.ts"
   ],
   "exclude": [
+    "src/**/*.test.ts",
     "node_modules"
   ]
 }
