:hammer: chore(ci): Add CI/CD script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "eslint-config-namchee/tsconfig",
   "compilerOptions": {
     "outDir": "./dist",
+    "importHelpers": true,
     "declaration": true
   },
   "include": [
