--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "build": "tsc",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
@@ -29,7 +29,6 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsdoc": "^36.1.0",
     "jest": "^27.2.0",
-    "msw": "^0.35.0",
     "prettier": "2.3.2",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
