:ambulance: fix: Enforce extension on imports so it does not break

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "eslint-config-namchee/tsconfig",
   "compilerOptions": {
+    "module": "ES2020",
     "outDir": "./dist",
     "importHelpers": true,
     "declaration": true
