:recycle: refactor: use isomorphic-unfetch to synchronize cross environment behavior

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "got": "^11.8.2",
+    "isomorphic-unfetch": "^3.1.0",
     "node-fetch": "^3.0.0"
   }
 }
